fix overflow of hidden table cells, re #8189

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -147,7 +147,8 @@ td.tree-elbow-line, td.tree-elbow-end {
         }
         .toggle-indicator ~ *:not(.dont-hide) {
             overflow: hidden;
-            text-indent: -200%;
+            text-indent: 100%;
+            white-space: nowrap;
         }
     }
 }
